--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/0508c06f11.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>ACCUEIL</title>
   </head>
   <body>
     <header>
@@ -15,5 +25,120 @@
         />
       </div>
     </header>
+    <div class="blocs-contener">
+      <div class="explore-contener">
+        <div class="Localisation">
+          <a class="localisation-icon">
+            <i class="fas fa-map-marker-alt"></i>
+          </a>
+          <input class="rechercher" />
+        </div>
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <div class="btn-explore">Explorez nos restaurants</div>
+      </div>
+      <div class="fonctionnement-contener">
+        <h2>Fonctionnement</h2>
+        <div class="btn-contener">
+          <a class="btn">
+            <div class="btn-number">1</div>
+            <div class="btn-icon"><i class="fas fa-mobile-alt"></i></div>
+            <div class="btn-txt">Choisissez un restaurant</div>
+          </a>
+          <a class="btn">
+            <div class="btn-number">2</div>
+            <div class="btn-icon"><i class="fas fa-list-ul"></i></div>
+            <div class="btn-txt">Composez votre menu</div>
+          </a>
+          <a class="btn">
+            <div class="btn-number">3</div>
+            <div class="btn-icon"><i class="fas fa-store"></i></div>
+            <div class="btn-txt">Dégustez au restaurant</div>
+          </a>
+        </div>
+      </div>
+      <div class="restaurant-contener">
+        <h2>Restaurants</h2>
+        <div class="cards-contener">
+          <div class="card">
+            <div class="image">
+              <div class="new">Nouveau</div>
+              <img
+                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+            </div>
+            <div class="plat"></div>
+            <div class="lieux"></div>
+            <div class="coeur"></div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <div class="new">Nouveau</div>
+              <img
+                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+            </div>
+            <div class="plat">Quiche</div>
+            <div class="lieux">TOURS</div>
+            <div class="coeur"><i class="far fa-heart"></i></div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <div class="new">Nouveau</div>
+              <img
+                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+            </div>
+            <div class="plat">Quiche</div>
+            <div class="lieux">TOURS</div>
+            <div class="coeur"><i class="far fa-heart"></i></div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img
+                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+            </div>
+            <div class="plat">Quiche</div>
+            <div class="lieux">TOURS</div>
+            <div class="coeur"><i class="far fa-heart"></i></div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img
+                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+            </div>
+            <div class="plat">Quiche</div>
+            <div class="lieux">TOURS</div>
+            <div class="coeur"><i class="far fa-heart"></i></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-zonetexte">
+        <div class="footer-logo">
+          <img
+            src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
+            alt="Logo OH MY FOOD"
+          />
+        </div>
+        <div class="footer-liens">
+          <a>
+            <div class="footer-icon"><i class="fas fa-utensils"></i></div>
+            <div class="footer-lienstxt">Proposer un restaurant</div>
+          </a>
+          <a>
+            <div class="footer-icon"><i class="fas fa-hands-helping"></i></div>
+            <div class="footer-lienstxt">Devenir partenaire</div>
+          </a>
+        </div>
+        <div class="footer-mentions">
+          <p><a>Mentions Légales</a></p>
+          <p><a>Contact</a></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
