add liens htm + intro css sur header et footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -19,38 +26,40 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
-          alt="Logo OH MY FOOD"
-        />
+        <a href="#">
+          <img
+            src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
+            alt="Logo OH MY FOOD"
+          />
+        </a>
       </div>
     </header>
     <div class="blocs-contener">
       <div class="explore-contener">
         <div class="Localisation">
-          <a class="localisation-icon">
+          <a class="localisation-icon" href="#">
             <i class="fas fa-map-marker-alt"></i>
           </a>
           <input class="rechercher" />
         </div>
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-        <div class="btn-explore">Explorez nos restaurants</div>
+        <a class="btn-explore" href="#">Explorez nos restaurants</a>
       </div>
       <div class="fonctionnement-contener">
         <h2>Fonctionnement</h2>
         <div class="btn-contener">
-          <a class="btn">
+          <a class="btn" href="#">
             <div class="btn-number">1</div>
             <div class="btn-icon"><i class="fas fa-mobile-alt"></i></div>
             <div class="btn-txt">Choisissez un restaurant</div>
           </a>
-          <a class="btn">
+          <a class="btn" href="#">
             <div class="btn-number">2</div>
             <div class="btn-icon"><i class="fas fa-list-ul"></i></div>
             <div class="btn-txt">Composez votre menu</div>
           </a>
-          <a class="btn">
+          <a class="btn" href="#">
             <div class="btn-number">3</div>
             <div class="btn-icon"><i class="fas fa-store"></i></div>
             <div class="btn-txt">Dégustez au restaurant</div>
@@ -61,79 +70,90 @@
         <h2>Restaurants</h2>
         <div class="cards-contener">
           <div class="card">
-            <div class="image">
-              <div class="new">Nouveau</div>
-              <img
-                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              />
-            </div>
-            <div class="plat"></div>
-            <div class="lieux"></div>
-            <div class="coeur"></div>
+            <a href="#">
+              <div class="image">
+                <div class="new">Nouveau</div>
+                <img
+                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                />
+              </div>
+              <div class="plat">Quiche</div>
+              <div class="lieux">TOURS</div>
+              <div class="coeur">
+                <a href="#">
+                  <i class="far fa-heart"></i>
+                </a>
+              </div>
+            </a>
           </div>
           <div class="card">
-            <div class="image">
-              <div class="new">Nouveau</div>
-              <img
-                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              />
-            </div>
-            <div class="plat">Quiche</div>
-            <div class="lieux">TOURS</div>
-            <div class="coeur"><i class="far fa-heart"></i></div>
+            <a href="#">
+              <div class="image">
+                <div class="new">Nouveau</div>
+                <img
+                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                />
+              </div>
+              <div class="plat">Quiche</div>
+              <div class="lieux">TOURS</div>
+              <div class="coeur">
+                <a href="#">
+                  <i class="far fa-heart"></i>
+                </a>
+              </div>
+            </a>
           </div>
           <div class="card">
-            <div class="image">
-              <div class="new">Nouveau</div>
-              <img
-                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              />
-            </div>
-            <div class="plat">Quiche</div>
-            <div class="lieux">TOURS</div>
-            <div class="coeur"><i class="far fa-heart"></i></div>
+            <a href="#">
+              <div class="image">
+                <div class="new">Nouveau</div>
+                <img
+                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                />
+              </div>
+              <div class="plat">Quiche</div>
+              <div class="lieux">TOURS</div>
+              <div class="coeur">
+                <a href="#">
+                  <i class="far fa-heart"></i>
+                </a>
+              </div>
+            </a>
           </div>
           <div class="card">
-            <div class="image">
-              <img
-                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              />
-            </div>
-            <div class="plat">Quiche</div>
-            <div class="lieux">TOURS</div>
-            <div class="coeur"><i class="far fa-heart"></i></div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img
-                src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              />
-            </div>
-            <div class="plat">Quiche</div>
-            <div class="lieux">TOURS</div>
-            <div class="coeur"><i class="far fa-heart"></i></div>
+            <a href="#">
+              <div class="image">
+                <img
+                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                />
+              </div>
+              <div class="plat">Quiche</div>
+              <div class="lieux">TOURS</div>
+              <div class="coeur">
+                <a href="#">
+                  <i class="far fa-heart"></i>
+                </a>
+              </div>
+            </a>
           </div>
         </div>
       </div>
     </div>
     <footer>
       <div class="footer-zonetexte">
-        <div class="footer-logo">
-          <img
-            src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
-            alt="Logo OH MY FOOD"
-          />
-        </div>
-        <div class="footer-liens">
-          <a>
+        <h2 class="footer-logo">ohmyfood</h2>
+        <a href="#">
+          <div class="footer-liens">
             <div class="footer-icon"><i class="fas fa-utensils"></i></div>
             <div class="footer-lienstxt">Proposer un restaurant</div>
-          </a>
-          <a>
+          </div>
+        </a>
+        <a href="#">
+          <div class="footer-liens">
             <div class="footer-icon"><i class="fas fa-hands-helping"></i></div>
             <div class="footer-lienstxt">Devenir partenaire</div>
-          </a>
-        </div>
+          </div>
+        </a>
         <div class="footer-mentions">
           <p><a>Mentions Légales</a></p>
           <p><a>Contact</a></p>
