add css sur restaurant + début sur fonctionnement

--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
                   src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 />
               </div>
-              <div class="plat">Quiche</div>
-              <div class="lieux">TOURS</div>
-              <div class="coeur">
-                <a href="#">
-                  <i class="far fa-heart"></i>
-                </a>
+              <div class="card-text">
+                <div class="plat">Quiche</div>
+                <div class="lieux">TOURS</div>
+                <div class="coeur">
+                  <a href="#">
+                    <i class="far fa-heart"></i>
+                  </a>
+                </div>
               </div>
             </a>
           </div>
@@ -94,29 +96,14 @@
                   src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 />
               </div>
-              <div class="plat">Quiche</div>
-              <div class="lieux">TOURS</div>
-              <div class="coeur">
-                <a href="#">
-                  <i class="far fa-heart"></i>
-                </a>
-              </div>
-            </a>
-          </div>
-          <div class="card">
-            <a href="#">
-              <div class="image">
-                <div class="new">Nouveau</div>
-                <img
-                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                />
-              </div>
-              <div class="plat">Quiche</div>
-              <div class="lieux">TOURS</div>
-              <div class="coeur">
-                <a href="#">
-                  <i class="far fa-heart"></i>
-                </a>
+              <div class="card-text">
+                <div class="plat">Quiche</div>
+                <div class="lieux">TOURS</div>
+                <div class="coeur">
+                  <a href="#">
+                    <i class="far fa-heart"></i>
+                  </a>
+                </div>
               </div>
             </a>
           </div>
@@ -127,12 +114,32 @@
                   src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 />
               </div>
-              <div class="plat">Quiche</div>
-              <div class="lieux">TOURS</div>
-              <div class="coeur">
-                <a href="#">
-                  <i class="far fa-heart"></i>
-                </a>
+              <div class="card-text">
+                <div class="plat">Quiche</div>
+                <div class="lieux">TOURS</div>
+                <div class="coeur">
+                  <a href="#">
+                    <i class="far fa-heart"></i>
+                  </a>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="#">
+              <div class="image">
+                <img
+                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                />
+              </div>
+              <div class="card-text">
+                <div class="plat">Quiche</div>
+                <div class="lieux">TOURS</div>
+                <div class="coeur">
+                  <a href="#">
+                    <i class="far fa-heart"></i>
+                  </a>
+                </div>
               </div>
             </a>
           </div>
