accueil ok en css sauf anmation + btn fct a revoir

--- a/index.html
+++ b/index.html
@@ -36,14 +36,23 @@
     </header>
     <div class="blocs-contener">
       <div class="explore-contener">
-        <div class="Localisation">
+        <div class="localisation">
           <a class="localisation-icon" href="#">
             <i class="fas fa-map-marker-alt"></i>
           </a>
-          <input class="rechercher" />
+          <input
+            type="search"
+            name="rechercher"
+            id="rechercher"
+            placeholder="Paris, Belleville"
+          />
         </div>
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <div class="titres">
+          <h1>Réservez le menu qui vous convient</h1>
+          <p>
+            Découvrez des restaurants d'exception, séléctionnés par nos soins
+          </p>
+        </div>
         <a class="btn-explore" href="#">Explorez nos restaurants</a>
       </div>
       <div class="fonctionnement-contener">
