--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <p>
             Découvrez des restaurants d'exception, séléctionnés par nos soins
           </p>
+          <a class="btn-explore" href="#">Explorez nos restaurants</a>
         </div>
-        <a class="btn-explore" href="#">Explorez nos restaurants</a>
       </div>
       <div class="fonctionnement-contener">
         <h2>Fonctionnement</h2>
@@ -87,8 +87,8 @@
                 />
               </div>
               <div class="card-text">
-                <div class="plat">Quiche</div>
-                <div class="lieux">TOURS</div>
+                <div class="plat">La palette du goût</div>
+                <div class="lieux">Ménilmontant</div>
                 <div class="coeur">
                   <a href="#">
                     <i class="far fa-heart"></i>
@@ -102,12 +102,12 @@
               <div class="image">
                 <div class="new">Nouveau</div>
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 />
               </div>
               <div class="card-text">
-                <div class="plat">Quiche</div>
-                <div class="lieux">TOURS</div>
+                <div class="plat">La note enchantée</div>
+                <div class="lieux">Charonne</div>
                 <div class="coeur">
                   <a href="#">
                     <i class="far fa-heart"></i>
@@ -120,12 +120,12 @@
             <a href="#">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 />
               </div>
               <div class="card-text">
-                <div class="plat">Quiche</div>
-                <div class="lieux">TOURS</div>
+                <div class="plat">A la française</div>
+                <div class="lieux">Cité Rouge</div>
                 <div class="coeur">
                   <a href="#">
                     <i class="far fa-heart"></i>
@@ -138,12 +138,12 @@
             <a href="#">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 />
               </div>
               <div class="card-text">
-                <div class="plat">Quiche</div>
-                <div class="lieux">TOURS</div>
+                <div class="plat">Le délice des sens</div>
+                <div class="lieux">Folie-Méricourt</div>
                 <div class="coeur">
                   <a href="#">
                     <i class="far fa-heart"></i>
@@ -172,7 +172,7 @@
         </a>
         <div class="footer-mentions">
           <p><a>Mentions Légales</a></p>
-          <p><a>Contact</a></p>
+          <p><a href="mailto:serviceclient@ohmyfood.com">Contact</a></p>
         </div>
       </div>
     </footer>
