--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <title>ACCUEIL</title>
   </head>
   <body>
+    <!-- <div class="loader_page">
+      <div class="loader_page--spinner">
+        <div class="loader_page--logo">
+          <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" />
+        </div>
+      </div>
+    </div> -->
     <header>
       <div class="logo">
         <a href="#">
@@ -52,7 +59,9 @@
           <p>
             Découvrez des restaurants d'exception, séléctionnés par nos soins
           </p>
-          <a class="btn-explore" href="#">Explorez nos restaurants</a>
+          <a class="btn-explore btn-gradient" href="#"
+            >Explorez nos restaurants</a
+          >
         </div>
       </div>
       <div class="fonctionnement-contener">
@@ -79,75 +88,79 @@
         <h2>Restaurants</h2>
         <div class="cards-contener">
           <div class="card">
-            <a href="#">
+            <a href="palette.html">
               <div class="image">
                 <div class="new">Nouveau</div>
                 <img
                   src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 />
               </div>
-              <div class="card-text">
-                <div class="plat">La palette du goût</div>
-                <div class="lieux">Ménilmontant</div>
+              <div class="card_description">
+                <div class="card-text">
+                  <div class="plat">La palette du goût</div>
+                  <div class="lieux">Ménilmontant</div>
+                </div>
                 <div class="coeur">
-                  <a href="#">
-                    <i class="far fa-heart"></i>
-                  </a>
+                  <i class="far fa-heart heart-default"></i>
+                  <i class="fas fa-heart heart-gradient"></i>
                 </div>
               </div>
             </a>
           </div>
           <div class="card">
-            <a href="#">
+            <a href="enchantee.html">
               <div class="image">
                 <div class="new">Nouveau</div>
                 <img
                   src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 />
               </div>
-              <div class="card-text">
-                <div class="plat">La note enchantée</div>
-                <div class="lieux">Charonne</div>
+              <div class="card_description">
+                <div class="card-text">
+                  <div class="plat">La note enchantée</div>
+                  <div class="lieux">Charonne</div>
+                </div>
                 <div class="coeur">
-                  <a href="#">
-                    <i class="far fa-heart"></i>
-                  </a>
+                  <i class="far fa-heart heart-default"></i>
+                  <i class="fas fa-heart heart-gradient"></i>
                 </div>
               </div>
             </a>
           </div>
           <div class="card">
-            <a href="#">
+            <a href="francais.html">
               <div class="image">
                 <img
                   src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 />
               </div>
-              <div class="card-text">
-                <div class="plat">A la française</div>
-                <div class="lieux">Cité Rouge</div>
+              <div class="card_description">
+                <div class="card-text">
+                  <div class="plat">À la Française</div>
+                  <div class="lieux">Cité Rouge</div>
+                </div>
                 <div class="coeur">
-                  <a href="#">
-                    <i class="far fa-heart"></i>
-                  </a>
+                  <i class="far fa-heart heart-default"></i>
+                  <i class="fas fa-heart heart-gradient"></i>
                 </div>
               </div>
             </a>
           </div>
           <div class="card">
-            <a href="#">
+            <a href="delice.html">
               <div class="image">
                 <img
                   src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 />
               </div>
-              <div class="card-text">
-                <div class="plat">Le délice des sens</div>
-                <div class="lieux">Folie-Méricourt</div>
+              <div class="card_description">
+                <div class="card-text">
+                  <div class="plat">Le délice des sens</div>
+                  <div class="lieux">Folie-Méricourt</div>
+                </div>
                 <div class="coeur">
-                  <a href="#">
-                    <i class="far fa-heart"></i>
-                  </a>
+                  <i class="far fa-heart heart-default"></i>
+                  <i class="fas fa-heart heart-gradient"></i>
                 </div>
               </div>
             </a>
