add page menu manque btn menu et btn commandez + responsive

--- a/francais.html
+++ b/francais.html
@@ -26,157 +26,156 @@
   </head>
   <body>
     <header>
-      <div class="arrow">
-        <a href="index.html">
-          <i class="fas fa-arrow-left"></i>
-        </a>
-      </div>
-      <div class="logo">
-        <a href="#">
+      <div class="head-bande">
+        <div class="header-arrow">
+          <a href="index.html">
+            <i class="fas fa-arrow-left"></i>
+          </a>
+        </div>
+        <div class="header-logo">
           <img
             src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
             alt="Logo OH MY FOOD"
           />
-        </a>
+        </div>
       </div>
+      <figure class="header-img">
+        <img
+          src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        />
+      </figure>
     </header>
-    <div class="contener">
-      <img
-        src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-      />
-      <main class="bloc-menu">
-        <div class="title">
-          <h2>À la française</h2>
-          <div class="coeur">
-            <a href="#">
-              <i class="far fa-heart"></i>
-            </a>
-          </div>
+    <main class="bloc-menu">
+      <div class="title">
+        <h2>À la française</h2>
+        <div class="coeur">
+          <i class="far fa-heart heart-default"></i>
+          <i class="fas fa-heart heart-gradient"></i>
         </div>
-        <div class="menu">
-          <h3>ENTRÉES</h3>
-          <div class="menu_section">
+      </div>
+      <div class="menu">
+        <h3>ENTRÉES</h3>
+        <div class="menu_section">
+          <div class="menu-btn">
             <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
               </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
-              </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle btn-checked"></i>
               </div>
             </a>
           </div>
-          <h3>PLATS</h3>
-          <div class="menu_section">
+          <div class="menu-btn">
             <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
               </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
-              </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
               </div>
             </a>
           </div>
-          <h3>DESSERTS</h3>
-          <div class="menu_section">
+          <div class="menu-btn">
             <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
               </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
-              </div>
-            </a>
-            <a href="#">
-              <div class="menu-btn">
-                <div class="menu-btntext">
-                  <div class="menu-btntext_bold">test</div>
-                  <div class="menu-btntext_regular">test</div>
-                </div>
-                <div class="menu-btn-price">000</div>
-                <div class="btn_valider">
-                  <i class="fas fa-check-circle"></i>
-                </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
               </div>
             </a>
           </div>
         </div>
-        <div class="commandez">
-          <a href="#"> Commandez </a>
+        <h3>PLATS</h3>
+        <div class="menu_section">
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
         </div>
-      </main>
-    </div>
+        <h3>DESSERTS</h3>
+        <div class="menu_section">
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
+          <div class="menu-btn">
+            <a href="#">
+              <div class="menu-btntext">
+                <div class="menu-btntext_bold">test</div>
+                <div class="menu-btntext_regular">test</div>
+              </div>
+              <div class="menu-btn-price">000</div>
+              <div class="btn_valider">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="commandez btn-gradient">
+        <a href="#"> Commandez </a>
+      </div>
+    </main>
     <footer>
       <div class="footer-zonetexte">
         <h2 class="footer-logo">ohmyfood</h2>
