--- a/index.html
+++ b/index.html
@@ -24,21 +24,15 @@
     <title>ACCUEIL</title>
   </head>
   <body>
-    <!-- <div class="loader_page">
-      <div class="loader_page--spinner">
-        <div class="loader_page--logo">
-          <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" />
-        </div>
+    <div class="spinloader">
+      <div class="spinner">
+        <div></div>
+        <div></div>
       </div>
-    </div> -->
+    </div>
     <header>
       <div class="logo">
-        <a href="#">
-          <img
-            src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
-            alt="Logo OH MY FOOD"
-          />
-        </a>
+        <a href="#"> Ohmyfood </a>
       </div>
     </header>
     <div class="blocs-contener">
