add animations menus + btn checked en cours

--- a/francais.html
+++ b/francais.html
@@ -33,10 +33,7 @@
           </a>
         </div>
         <div class="header-logo">
-          <img
-            src="./Maquettes Ohmyfood/images/logo/ohmyfood.png"
-            alt="Logo OH MY FOOD"
-          />
+          <a href="#"> Ohmyfood </a>
         </div>
       </div>
       <figure class="header-img">
@@ -57,118 +54,118 @@
         <h3>ENTRÉES</h3>
         <div class="menu_section">
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle btn-checked"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
         </div>
         <h3>PLATS</h3>
         <div class="menu_section">
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
         </div>
         <h3>DESSERTS</h3>
         <div class="menu_section">
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
           <div class="menu-btn">
-            <a href="#">
-              <div class="menu-btntext">
-                <div class="menu-btntext_bold">test</div>
-                <div class="menu-btntext_regular">test</div>
-              </div>
-              <div class="menu-btn-price">000</div>
-              <div class="btn_valider">
-                <i class="fas fa-check-circle"></i>
-              </div>
-            </a>
+            <div class="menu-btn-titre">
+              <h4>test</h4>
+            </div>
+            <div class="menu-btn-sstitre">
+              <p>test</p>
+              <span>price</span>
+            </div>
+            <div class="btn_valider">
+              <i class="fas fa-check-circle btn-checked"></i>
+            </div>
           </div>
         </div>
       </div>
