remplissage des pages + reponsive sur les pages menus

--- a/ledelicedes_sens.html
+++ b/ledelicedes_sens.html
@@ -22,7 +22,7 @@
     ></script>
     <link rel="stylesheet" href="styles_pagesmenu.css" />
     <link rel="stylesheet" href="sass.scss" />
-    <title>Le délice des sens</title>
+    <title>Ohmyfood - Le délice des sens</title>
   </head>
   <body>
     <header>
@@ -55,11 +55,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Tartare de thon</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Assaisonné au yuzu</p>
+              <span>25€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -67,11 +67,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Bouchée de homard croustillant</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et sa farandole de petits légumes</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -79,11 +79,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Velouté de cèpes</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Aux truffes</p>
+              <span>20€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -94,11 +94,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Poulet rôti aux herbes de Provence</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et sa crème de truffe</p>
+              <span>40€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -106,11 +106,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Langouste rôtie</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et ses légumes de saison</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -118,11 +118,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Côte de boeuf Angus</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et sa purée de panais</p>
+              <span>44€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -133,11 +133,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Farandole de desserts</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Du chef</p>
+              <span>18€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -145,11 +145,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Crème brulée</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Revisitée</p>
+              <span>22€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -157,11 +157,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Tiramisu</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>À la noisette</p>
+              <span>23€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
