--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -55,11 +55,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Tartare de poulpe acidulé</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Aux zests d'orange</p>
+              <span>25€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -67,11 +67,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Velouté de légumes d'antan</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Carotte, panais, topinambour</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -79,11 +79,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Soupe à l'oignon</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Revisitée</p>
+              <span>20€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -94,11 +94,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Coquilles Saint-Jacques</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Accompagnées d'une purée de panais</p>
+              <span>40€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -106,11 +106,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Magret de canard</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et parmentier de pommes de terres</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -118,11 +118,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Pigeonneau d'Ille-et-Vilaine</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Sur son lit de gnocchis aux légumes</p>
+              <span>44€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -133,11 +133,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Pétales de violettes glacés</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et purée de noisette</p>
+              <span>18€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -145,11 +145,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Fondant au chocolat</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Revisité</p>
+              <span>22€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -157,11 +157,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Millefeuille croustillant</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Myrtilles et pâtes d'amande</p>
+              <span>23€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
