--- a/lanote_enchantee.html
+++ b/lanote_enchantee.html
@@ -22,7 +22,7 @@
     ></script>
     <link rel="stylesheet" href="styles_pagesmenu.css" />
     <link rel="stylesheet" href="sass.scss" />
-    <title>La note enchantée</title>
+    <title>Ohmyfood - La note enchantée</title>
   </head>
   <body>
     <header>
@@ -55,11 +55,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Ravioles de foie gras</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Accompagné de leur crème à la truffe</p>
+              <span>25€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -67,11 +67,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Caviar osciète</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Sur blini à la farine de blé noir</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -79,11 +79,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Homard et espuma de potiron</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Mariné aux zests d'orange</p>
+              <span>20€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -94,11 +94,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Noix de coquilles Saint-Jacques</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Sur lit de purée de céleri-rave</p>
+              <span>40€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -106,11 +106,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Langoustine pôélée</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Purée de patate douce</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -118,11 +118,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Mijoté de queue de boeuf</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et riz sauvage aux zests de citron</p>
+              <span>44€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -133,11 +133,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Macaron noisette et chocolat</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Glace au caramel brun et sel de Guérande</p>
+              <span>18€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -145,11 +145,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Baba au rhum revisité</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Avec son coulis de citron</p>
+              <span>22€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -157,11 +157,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Tarte au citron meringuée</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Destructurée</p>
+              <span>22€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
