--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -22,7 +22,7 @@
     ></script>
     <link rel="stylesheet" href="styles_pagesmenu.css" />
     <link rel="stylesheet" href="sass.scss" />
-    <title>La palette du goût</title>
+    <title>Ohmyfood - La palette du goût</title>
   </head>
   <body>
     <header>
@@ -55,11 +55,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Fricassée d'escargot</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Au piment d'espelette</p>
+              <span>25€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -67,11 +67,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Foie gras de canard mi-cuit</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et ses copeaux de truffe noire</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -79,11 +79,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Oeuf au plat</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Assaisonné à la truffe sur lit de caviar</p>
+              <span>20€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -94,11 +94,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Filet de boeuf aux herbes</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Accompagné de sa ribambelle de légumes</p>
+              <span>40€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -106,11 +106,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Parmentier de queue de boeuf</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>À la truffe noire sur sa purée de panais</p>
+              <span>35€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -118,11 +118,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Filet de turbot</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Aux agrumes</p>
+              <span>44€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -133,11 +133,11 @@
         <div class="menu_section">
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Paris-Brest</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Revisité</p>
+              <span>13€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -145,11 +145,11 @@
           </div>
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Macaron au chocolat d'exception</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Et glace à la vanille de Madagascar</p>
+              <span>22€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
@@ -157,11 +157,11 @@
           </div>
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
-              <h4>test</h4>
+              <h4>Mousse au chocolat</h4>
             </div>
             <div class="menu-btn-sstitre">
-              <p>test</p>
-              <span>price</span>
+              <p>Au piment d'espelette et à la truffe noire</p>
+              <span>23€</span>
             </div>
             <div class="btn_valider">
               <i class="fas fa-check-circle btn-checked"></i>
